infra/gcp/terraform/k8s-infra-prow-build/prow-build/resources/monitoring/grafana/lb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana-lb
  labels:
    app: grafana
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
