infra/gcp/terraform/k8s-infra-prow-build/prow-build/resources/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    app: grafana
