infra/gcp/terraform/k8s-infra-prow-build/prow-build/resources/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: grafana-ingress
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: grafana
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        name: http
